--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,8 @@ uuid = "79b54fe2-a139-487f-adcb-0564ee322c48"
 authors = ["Matouš Soldát"]
 version = "0.1.0"
 
+[deps]
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
+
 [compat]
 julia = "1.6.7"
