--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Matouš Soldát"]
 version = "0.1.0"
 
 [deps]
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
